css/newstyle.css
* {
	margin: 0;
	padding: 0;
}

a:link {
	text-decoration: none;
}

body {
	background-image: url("../images/stardust.png");
	background-attachment: fixed;
}

.title {
	padding-top: 60px;
	text-align: center;
	font-size: 5.4rem;
	font-weight: 100;
	color: #FFFFFF;
	font-family: "Helvetica Neue", sans-serif;
}

.onevh {
	min-height: 100vh;
}

.navcontainer {
	text-align: center;
	padding: 50px 0px 60px 0px;
}

.nav {
	font-family: "Helvetica Neue", sans-serif;
	font-weight: 200;
	color: #FFFFFF;
	font-size: 1.7rem;
	padding: 30px;
	cursor: pointer;
}

.nav:hover {
	color: #FF9933;
}

.hover-highlight {
	color: #FF9933;
}

.tabcontainer {
	text-align: center;
	padding: 0px 150px;
}

.tab {
	display: none;
	text-align: center;
	padding: 50px;
	height: 250px;
	border-radius: 12px;
	background-color: #FFFFFF;
	font-family: "Cabin", "Helvetica Neue", sans-serif;
	font-weight: 100;
	color: black;
	font-size: 1.8rem;
}

.project {
	font-family: "Montserrat", "Helvetica Neue", sans-serif;
	display: inline-block;
	border-radius: 12px;
	width: 16%;
	min-width: 125px;
	padding: 50px 20px 50px 20px;
	margin: 45px 10px 0 10px;
	background-color: #788CD3;
	font-size: 1.8rem;
	color: #FFFFFF;
}

.project:hover {
	background-color: #6C7EBE;
}

.mediabutton {
	border-radius: 50%;
	display: inline-block;
}

.mediabutton:hover {
	background-color: #A4D8E2;
}

.github {
	padding-bottom: 30px;
}

.cube1 {
	margin-top: 120px;
	margin-left: auto;
	margin-right: auto;
	height: 50px;
	width: 50px;
	background-color: #FFFFFF;
  	-webkit-animation: spin 10s linear infinite;
	-moz-animation: spin 10s linear infinite;
	-o-animation: spin 10s linear infinite;
}

.cube2 {
	margin-top: -61px;
	margin-left: auto;
	margin-right: auto;
	height: 71px;
	width: 71px;
	background-color: #FFFFFF;
	opacity: 0.5;
  	-webkit-animation: negspin 10s linear infinite;
	-moz-animation: negspin 10s linear infinite;
	-o-animation: negspin 10s linear infinite;
}

.cube3 {
	margin-top: -85px;
	margin-left: auto;
	margin-right: auto;
	height: 100px;
	width: 100px;
	background-color: #FFFFFF;
	opacity: 0.25;
  	-webkit-animation: spin 10s linear infinite;
	-moz-animation: spin 10s linear infinite;
	-o-animation: spin 10s linear infinite;
}

@-moz-keyframes spin {
    from { -moz-transform: rotate(0deg); }
    to { -moz-transform: rotate(360deg); }
}

@-webkit-keyframes spin {
    from { -webkit-transform: rotate(0deg); }
    to { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
    from {transform:rotate(0deg);}
    to {transform:rotate(360deg);}
}

@-moz-keyframes negspin {
    from { -moz-transform: rotate(360deg); }
    to { -moz-transform: rotate(0deg); }
}

@-webkit-keyframes negspin {
    from { -webkit-transform: rotate(360deg); }
    to { -webkit-transform: rotate(0deg); }
}

@keyframes negspin {
    from {transform:rotate(360deg);}
    to {transform:rotate(00deg);}
}

@media (max-width: 1024px) {
	.tab {
		font-size: 1.4rem;
	}

	.project {
		display: block;
		width: 90%;
		padding: 15px 0 15px 0;
		margin-left: auto;
		margin-right: auto;
		margin-top: 15px;
		margin-bottom: 15px;
		font-size: 1.5rem;
	}
}

@media (max-width: 768px) {
	.title {
		padding-top: 30px;
		font-size: 3rem;
	}

	.navcontainer {
		padding: 30px 0px;
	}

	.nav {
	   font-size: 1rem;
	   padding: 10px 10px;
	}

	.tabcontainer {
		padding: 0px 25px;
	}

	.tab {
		padding: 25px;
		height: 220px;
		font-size: 1.2rem;
	}

	.project {
		width: 80%;
		padding: 10px 0 10px 0;
	}
}

